plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.sh'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot 관련 의존성
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Thymeleaf 및 Spring Security 관련 추가 의존성
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	// AWS SDK 및 JSON 파싱 관련 의존성
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.761'
	implementation 'com.google.code.gson:gson:2.8.9'

	// Lombok 관련 의존성
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// SMS API 의존성
	implementation 'net.nurigo:javaSDK:2.2'

	// Elasticsearch 의존성
	implementation 'org.springframework.data:spring-data-elasticsearch:5.3.2'

	// MySQL 연결 의존성
	runtimeOnly 'com.mysql:mysql-connector-j'

	// 테스트 관련 의존성
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


tasks.named('test') {
	useJUnitPlatform()
}
